--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,6 @@ spring.mvc.view.suffix = .jsp
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+#SPOONACULAR 
+spoonacular.api.endpoint.prod=https://api.spoonacular.com/recipes
+spoonacular.apiKey= 0737d455e8624e259f602fa0a39ab5f5
